@@ -219,9 +219,21 @@ set weirdTag "funny . +- 22.1\n\t{"
 set weirdMark "asdf \n{-+ 66.2\t"
 .t mark set $weirdMark 4.0
 .t tag config y -relief raised
+set weirdImage "foo-1"
+.t image create 2.0 -image [image create photo $weirdImage]
 test textIndex-3.1 {TkTextGetIndex, weird mark names} {
     list [catch {.t index $weirdMark} msg] $msg
 } {0 4.0}
+test textIndex-3.2 {TkTextGetIndex, weird mark names} knownBug {
+    list [catch {.t index "$weirdMark -1char"} msg] $msg
+} {0 4.0}
+test textIndex-3.3 {TkTextGetIndex, weird image names} {
+    list [catch {.t index $weirdImage} msg] $msg
+} {0 2.0}
+test textIndex-3.4 {TkTextGetIndex, weird image names} knownBug {
+    list [catch {.t index "$weirdImage -1char"} msg] $msg
+} {0 2.0}
+.t delete 2.0  ; # remove the weirdImage
 
 test textIndex-4.1 {TkTextGetIndex, tags} {
     list [catch {.t index x.first} msg] $msg
